k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowise-worker
  namespace: xheal-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flowise-worker
  template:
    metadata:
      labels:
        app: flowise-worker
    spec:
      containers:
        - name: app
          image: 050451365515.dkr.ecr.eu-central-1.amazonaws.com/xheal/flowise:latest
          command:
            - pnpm
          args:
            - start-worker
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 256m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /api/v1/ping
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /api/v1/ping
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /api/v1/ping
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      terminationGracePeriodSeconds: 360
