k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowise
  namespace: xheal-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flowise
  template:
    metadata:
      labels:
        app: flowise
    spec:
      containers:
        - name: app
          image: 050451365515.dkr.ecr.eu-central-1.amazonaws.com/xheal/flowise:latest
          command:
            - pnpm
          args:
            - start
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: api-keys-config
            mountPath: /usr/src
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 256m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /api/v1/ping
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /api/v1/ping
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /api/v1/ping
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      terminationGracePeriodSeconds: 360

---
apiVersion: v1
kind: Service
metadata:
  name: flowise
  namespace: xheal-prod
  labels:
    app: flowise
  annotations:
    prometheus.io/port: "3000"
    prometheus.io/scrape: "true"
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: flowise
